Added promo banner with padding

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
     </style>
 </head>
-<body class="bg-slate-950 text-slate-100 min-h-screen flex flex-col transition-colors duration-300" id="app-body">
+<body class="bg-slate-950 text-slate-100 min-h-screen flex flex-col transition-colors duration-300 pb-16" id="app-body">
 
     <!-- Navigation -->
     <nav class="border-b border-slate-800 bg-slate-950/80 backdrop-blur-md sticky top-0 z-50 transition-colors duration-300" id="nav">
@@ -764,5 +764,19 @@
         })();
 
     </script>
+    <!-- Promo Banner Start -->
+<div class="fixed bottom-0 left-0 w-full bg-gradient-to-r from-blue-900 to-purple-900 text-white p-3 text-center z-50 shadow-lg">
+  <p class="text-sm md:text-base font-medium">
+    Want to create 3D Product Mockups with AI? 🚀
+    <a 
+      href="https://superprofile.bio/ayeshabuilds" 
+      target="_blank" 
+      class="ml-2 font-bold underline text-yellow-300 hover:text-yellow-100"
+    >
+      Check out MerchMockup AI
+    </a>
+  </p>
+</div>
+<!-- Promo Banner End -->
 </body>
 </html>
